main.sass
html, body {
  margin: 0;
  padding: 0;
  background: lightgray;
  font-family: sans-serif;
  height: 100%;
}


.nav-bar {
	max-height:60px;
	width: 100%;
	z-index: 1;
	background: url("images/nav-bar-gradient2.png") repeat-x top;
}
#mobber {
	text-align: left;
	text-color: red;
}

.nav-bar p {
		font-family: 'Didact Gothic', sans-serif;
	  color: white;
	  font-size: 20px;
	  max-height: 60px;
	  margin-bottom: 14px;
}
.igor {
width: 70px;

}
.hat-logo {
	margin: 10px 0 10px;
}

.spread-bar {
	margin:0;
	padding:0;
	background-color: white;
	height: 90px;
	width:100%;
	border-bottom: 2px solid rgb(217,217,217);
}
.spread-bar p {
		// position: absolute;
	text-align: center;
	line-height: 90px;
	color: black;
	padding: 0;
	margin:0;
	max-height: 90px;
	width:100%;
	left: 0;
	top: 0;
	font-family: 'Roboto', sans-serif;
	font-size: 25px;

}
.body-bar {
	height: 580px;
	background-color: rgb(242,240,236);

}

#box {  
	max-width: 620px;
  height: 400px;
  box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
  border-bottom:2px solid #fff;
  border-right:2px solid #fff;
  margin-top:30px ;
  background: url("./images/angry-mob.jpg");
  background-size:cover;
  border-radius:5px;
  overflow:hidden;
}

#overlay {  
	background:rgba(0,0,0,.75);
  text-align: left;
  color:white;
  height: 2px;
  padding:5px 0 50px 0;
  opacity:0;
  font-family: 'Roboto', sans-serif;
  font-size: 25px;
  -webkit-transition: opacity .25s ease;}

#box #overlay {
	opacity:1;
}

